--- a/index.html
+++ b/index.html
@@ -1,34 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Vue.js Component</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <title>vue-simple-chatbot</title>
   </head>
   <body>
-    <h1>Vue.js Component</h1>
-    <div id="app">
-      <div class="vue-component-display">
-        <vue-simple-chatbot></vue-simple-chatbot>
-      </div>
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/1.0.1/vue.min.js"></script>
-    <script src="./dist/vue-simple-chatbot.min.js"></script>
-
-    <script>
-
-      Vue.config.debug = true
-
-      new Vue({
-        el: '#app',
-        components: {
-          VueSimpleChatbot: VueSimpleChatbot,
-        },
-        data () {
-          return {}
-        },
-        methods: {}
-      })
-
-    </script>
+    <div id="app"></div>
+    <script src="./dist/build.js"></script>
+    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </body>
 </html>
